k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ld-stadt-zuerich-ch
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
