k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ld-stadt-zuerich-ch
  annotations:
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: ld-stadt-zuerich-ch.zazukoians.org
spec:
  tls:
    - secretName: ld-stadt-zuerich-ch-cert
      hosts:
        - ld.stadt-zuerich.ch
  rules:
    - host: ld.stadt-zuerich.ch
      http:
        paths:
          - path: /
            backend:
              serviceName: ld-stadt-zuerich-ch
              servicePort: 80
